--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/Views/MainWindow.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/Views/MainWindow.axaml
@@ -7,7 +7,7 @@
         x:Class="MattEland.DigitalDungeonMaster.AvaloniaApp.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="MattEland.DigitalDungeonMaster.AvaloniaApp">
+        Title="Digital Dungeon Master">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
