--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/Views/MainWindow.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/Views/MainWindow.axaml
@@ -3,18 +3,18 @@
         xmlns:vm="using:MattEland.DigitalDungeonMaster.AvaloniaApp.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:MattEland.DigitalDungeonMaster.AvaloniaApp.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="MattEland.DigitalDungeonMaster.AvaloniaApp.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
+        WindowState="Maximized"
+        WindowStartupLocation="CenterScreen"
         Icon="/Assets/avalonia-logo.ico"
         Title="Digital Dungeon Master">
-
     <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <views:LoginView />
 
 </Window>
