#51 Added aspire arg and service default

--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/Views/MainWindow.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:MattEland.DigitalDungeonMaster.AvaloniaApp.Views"
+        xmlns:app="clr-namespace:MattEland.DigitalDungeonMaster.AvaloniaApp"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="MattEland.DigitalDungeonMaster.AvaloniaApp.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -12,9 +13,9 @@
         Icon="/Assets/avalonia-logo.ico"
         Title="Digital Dungeon Master">
     <Design.DataContext>
-        <vm:MainWindowViewModel/>
+        <vm:MainWindowViewModel />
     </Design.DataContext>
 
-    <views:LoginView />
+    <ContentControl Content="{Binding Path=CurrentPage}" />
 
 </Window>
