Form styling and dynamic view / VM / page loading

--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/App.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/App.axaml
@@ -11,6 +11,6 @@
     </Application.DataTemplates>
 
      <Application.Styles>
-         <semi:SemiTheme />
+         <semi:SemiTheme Locale="en-US" />
      </Application.Styles>
 </Application>
