--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/Widgets/PageHeader.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/Widgets/PageHeader.axaml
@@ -7,6 +7,7 @@
 
     <Style Selector="controls|PageHeader">
         <!-- Set Defaults -->
+        <Setter Property="MaxWidth" Value="600" />
         <Setter Property="Template">
             <ControlTemplate>
                 <StackPanel Orientation="Vertical" Spacing="32">
