Chat UI Prototyping

--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/Views/MainWindow.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/Views/MainWindow.axaml
@@ -6,6 +6,8 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="MattEland.DigitalDungeonMaster.AvaloniaApp.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
+        MinHeight="600"
+        MinWidth="800"
         WindowState="Maximized"
         WindowStartupLocation="CenterScreen"
         Icon="/Assets/avalonia-logo.ico"
@@ -14,6 +16,6 @@
         <vm:MainWindowViewModel />
     </Design.DataContext>
 
-    <ContentControl Content="{Binding Path=CurrentPage}" />
+    <ContentControl Content="{Binding Path=CurrentPage}" Padding="16" />
 
 </Window>
