--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/Pages/InGamePage.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/Pages/InGamePage.axaml
@@ -2,9 +2,63 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:MattEland.DigitalDungeonMaster.AvaloniaApp.ViewModels"
+             xmlns:shared="clr-namespace:MattEland.DigitalDungeonMaster.Shared;assembly=MattEland.DigitalDungeonMaster.Shared"
+             xmlns:selectors="clr-namespace:MattEland.DigitalDungeonMaster.AvaloniaApp.Selectors"
              HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
              HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             MinWidth="800"
+             x:DataType="vm:InGameViewModel"
              x:Class="MattEland.DigitalDungeonMaster.AvaloniaApp.Pages.InGamePage">
-    In Game Page
+    <DockPanel>
+        <Label Classes="H1"
+               DockPanel.Dock="Top"
+               Content="{Binding Path=Title}"
+               Theme="{DynamicResource TitleLabel}"
+               HorizontalAlignment="Left" />
+        <DockPanel DockPanel.Dock="Bottom">
+            <Button DockPanel.Dock="Right"
+                    Theme="{DynamicResource SolidButton}"
+                    Classes="Primary Large"
+                    Margin="8 0 0 0"
+                    ToolTip.Tip="Sends the message to the game"
+                    IsDefault="True">
+                Send
+            </Button>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" DockPanel.Dock="Left" Classes="Large">
+                <Label VerticalContentAlignment="Center">To</Label>
+                <ComboBox VerticalAlignment="Center" ToolTip.Tip="The AI agent to send the message to" SelectedIndex="0" Margin="8 0">
+                    <ComboBoxItem>Game Master</ComboBoxItem>
+                </ComboBox>
+            </StackPanel>
+            <TextBox Watermark="Enter your message and click Send" Classes="Large"></TextBox>
+        </DockPanel>
+        <ItemsControl Margin="0 16" ItemsSource="{Binding Path=ConversationHistory}">
+            <ItemsControl.DataTemplates>
+                <selectors:ChatMessageTemplateSelector>
+                    <DataTemplate x:Key="You" DataType="shared:ChatMessage">
+                        <Border Classes="Hover" Theme="{DynamicResource CardBorder}" HorizontalAlignment="Right" Background="{DynamicResource SemiBlue0}">
+                            <StackPanel Orientation="Vertical" Spacing="8">
+                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                    <Label Content="{Binding Path=Author}" Classes="H5" Theme="{StaticResource TitleLabel}" HorizontalAlignment="Right" />
+                                </StackPanel>
+                                <TextBlock Text="{Binding Path=Message}" TextWrapping="Wrap" />
+                            </StackPanel>
+                        </Border>
+                    </DataTemplate>
+                    <DataTemplate x:Key="Agent" DataType="shared:ChatMessage">
+                        <Border Classes="Hover" Theme="{DynamicResource CardBorder}" HorizontalAlignment="Left" Background="{DynamicResource SemiViolet0}">
+                            <StackPanel Orientation="Vertical" Spacing="8">
+                                <StackPanel Orientation="Horizontal" Spacing="8">
+                                    <Label Content="{Binding Path=Author}" Classes="H5" Theme="{StaticResource TitleLabel}" />
+                                </StackPanel>
+                                <TextBlock Text="{Binding Path=Message}" TextWrapping="Wrap" />
+                            </StackPanel>
+                        </Border>
+                    </DataTemplate>
+                </selectors:ChatMessageTemplateSelector>
+            </ItemsControl.DataTemplates>
+        </ItemsControl>
+    </DockPanel>
 </UserControl>
