--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/Pages/InGamePage.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/Pages/InGamePage.axaml
@@ -8,7 +8,6 @@
              HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
              HorizontalContentAlignment="Center" VerticalContentAlignment="Stretch"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             MinWidth="800"
              x:DataType="vm:InGameViewModel"
              x:Class="MattEland.DigitalDungeonMaster.AvaloniaApp.Pages.InGamePage">
     <DockPanel>
@@ -26,39 +25,50 @@
                     IsDefault="True">
                 Send
             </Button>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" DockPanel.Dock="Left" Classes="Large">
-                <Label VerticalContentAlignment="Center">To</Label>
-                <ComboBox VerticalAlignment="Center" ToolTip.Tip="The AI agent to send the message to" SelectedIndex="0" Margin="8 0">
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" DockPanel.Dock="Left">
+                <Label VerticalContentAlignment="Center" Classes="Tertiary">To</Label>
+                <ComboBox VerticalAlignment="Center" 
+                          Classes="Large"
+                          ToolTip.Tip="The AI agent to send the message to"
+                          SelectedIndex="0" Margin="8 0">
                     <ComboBoxItem>Game Master</ComboBoxItem>
                 </ComboBox>
             </StackPanel>
             <TextBox Watermark="Enter your message and click Send" Classes="Large"></TextBox>
         </DockPanel>
-        <ItemsControl Margin="0 16" ItemsSource="{Binding Path=ConversationHistory}">
-            <ItemsControl.DataTemplates>
-                <selectors:ChatMessageTemplateSelector>
-                    <DataTemplate x:Key="You" DataType="shared:ChatMessage">
-                        <Border Classes="Hover" Theme="{DynamicResource CardBorder}" HorizontalAlignment="Right" Background="{DynamicResource SemiBlue0}">
-                            <StackPanel Orientation="Vertical" Spacing="8">
-                                <StackPanel Orientation="Horizontal" Spacing="8">
-                                    <Label Content="{Binding Path=Author}" Classes="H5" Theme="{StaticResource TitleLabel}" HorizontalAlignment="Right" />
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+            <ItemsControl Margin="0 16" ItemsSource="{Binding Path=ConversationHistory}">
+                <ItemsControl.DataTemplates>
+                    <selectors:ChatMessageTemplateSelector>
+                        <DataTemplate x:Key="You" DataType="shared:ChatMessage">
+                            <Border Classes="Hover" 
+                                    Theme="{DynamicResource CardBorder}" 
+                                    Margin="16 4"
+                                    HorizontalAlignment="Right"
+                                    Background="{DynamicResource SemiBlue0}">
+                                <StackPanel Orientation="Vertical" Spacing="8">
+                                    <Label Content="{Binding Path=Author}" Classes="H5"
+                                           Theme="{StaticResource TitleLabel}" HorizontalAlignment="Right" />
+                                    <TextBlock Text="{Binding Path=Message}" TextWrapping="Wrap" />
                                 </StackPanel>
-                                <TextBlock Text="{Binding Path=Message}" TextWrapping="Wrap" />
-                            </StackPanel>
-                        </Border>
-                    </DataTemplate>
-                    <DataTemplate x:Key="Agent" DataType="shared:ChatMessage">
-                        <Border Classes="Hover" Theme="{DynamicResource CardBorder}" HorizontalAlignment="Left" Background="{DynamicResource SemiViolet0}">
-                            <StackPanel Orientation="Vertical" Spacing="8">
-                                <StackPanel Orientation="Horizontal" Spacing="8">
-                                    <Label Content="{Binding Path=Author}" Classes="H5" Theme="{StaticResource TitleLabel}" />
+                            </Border>
+                        </DataTemplate>
+                        <DataTemplate x:Key="Agent" DataType="shared:ChatMessage">
+                            <Border Classes="Hover" 
+                                    Margin="0 4"
+                                    Theme="{DynamicResource CardBorder}" 
+                                    HorizontalAlignment="Left"
+                                    Background="{DynamicResource SemiViolet0}">
+                                <StackPanel Orientation="Vertical" Spacing="8">
+                                    <Label Content="{Binding Path=Author}" Classes="H5"
+                                           Theme="{StaticResource TitleLabel}" />
+                                    <TextBlock Text="{Binding Path=Message}" TextWrapping="Wrap" />
                                 </StackPanel>
-                                <TextBlock Text="{Binding Path=Message}" TextWrapping="Wrap" />
-                            </StackPanel>
-                        </Border>
-                    </DataTemplate>
-                </selectors:ChatMessageTemplateSelector>
-            </ItemsControl.DataTemplates>
-        </ItemsControl>
+                            </Border>
+                        </DataTemplate>
+                    </selectors:ChatMessageTemplateSelector>
+                </ItemsControl.DataTemplates>
+            </ItemsControl>
+        </ScrollViewer>
     </DockPanel>
 </UserControl>
