--- a/MattEland.DigitalDungeonMaster.AvaloniaApp/Pages/InGamePage.axaml
+++ b/MattEland.DigitalDungeonMaster.AvaloniaApp/Pages/InGamePage.axaml
@@ -45,11 +45,15 @@
                                     Theme="{DynamicResource CardBorder}" 
                                     Margin="16 4"
                                     HorizontalAlignment="Right"
-                                    Background="{DynamicResource SemiBlue0}">
+                                    Background="{DynamicResource SemiBlue3}">
                                 <StackPanel Orientation="Vertical" Spacing="8">
                                     <Label Content="{Binding Path=Author}" Classes="H5"
-                                           Theme="{StaticResource TitleLabel}" HorizontalAlignment="Right" />
-                                    <TextBlock Text="{Binding Path=Message}" TextWrapping="Wrap" />
+                                           Theme="{StaticResource TitleLabel}" 
+                                           Foreground="{DynamicResource SemiColorText0}"
+                                           HorizontalAlignment="Right" />
+                                    <TextBlock Text="{Binding Path=Message}" 
+                                               Foreground="{DynamicResource SemiColorText0}"
+                                               TextWrapping="Wrap" />
                                 </StackPanel>
                             </Border>
                         </DataTemplate>
@@ -58,11 +62,14 @@
                                     Margin="0 4"
                                     Theme="{DynamicResource CardBorder}" 
                                     HorizontalAlignment="Left"
-                                    Background="{DynamicResource SemiViolet0}">
+                                    Background="{DynamicResource SemiViolet3}">
                                 <StackPanel Orientation="Vertical" Spacing="8">
                                     <Label Content="{Binding Path=Author}" Classes="H5"
+                                           Foreground="{DynamicResource SemiColorText0}"
                                            Theme="{StaticResource TitleLabel}" />
-                                    <TextBlock Text="{Binding Path=Message}" TextWrapping="Wrap" />
+                                    <TextBlock Text="{Binding Path=Message}" 
+                                               Foreground="{DynamicResource SemiColorText0}"
+                                               TextWrapping="Wrap" />
                                 </StackPanel>
                             </Border>
                         </DataTemplate>
